# sdl3-mini-template-Cmake-FetchContent

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build-and-run.bat  build-macos-arm64.sh  build-macos-arm64_Ninja.sh  build-macos-x86_64.sh  build-macos-x86_64_Ninja.sh  build.bat  clean-cache.bat  create-macos-arm64.sh  create-macos-arm64_Ninja.sh  create-macos-x86_64.sh  create-macos-x86_64_Ninja.sh  create.bat  run-release.bat  web-create-proj.bat
.github/workflows/: cmake-multi-platform.yml
docs/: pawn-integration-fixes.md
libs/emscripten/: _emscripten_mainloop_stub.h  shell_minimal.html
src/: CMakeLists.txt  config.h  config.h.in  main.cpp  main_ogl3.cpp  main_sdlgpu.cpp  main_sdlrenderer3.cpp  main_sdlvulkan.cpp  mini_gravity.h  mini_native_functions.h  mini_pawn.h  mini_quickjs.h  mini_sol3.h  pawn_host.c  pawn_host_mem.c
web-tools/: build-ninja.bat
web-tools/favicon/: url.txt
web-tools/ninja-bootstrap/: CMakeLists.txt
